# pyspace

./: .gitignore  LICENSE  README.md  generic_graph.py  pyproject.toml  sandbox.py
.matplotlib/: fontlist-v390.json
pyspace/: __init__.py  animation.py  exceptions.py  frame.py  frames.py  geometry.py  graph  graph.py  protocols.py  render.py  transform.py  transform_graph.py  tree.py  wrapt_sandbox.py
scripts/: local_coords.py  world_coords.py
scripts/local/: animation.py
tests/: test_animation.py  test_frames.py  test_geometry.py  test_graph.py  test_node.py  test_transform.py  test_tree.py
