[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyspace"
version = "0.1.0"
description = "Library used to handle geometry and reference frames."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bidict>=0.23.1",
    "graphviz>=0.21",
    "numpy>=2.4.3",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]
